--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8000
-spring.datasource.url= jdbc:mysql://localhost:3306/house_booking
+spring.datasource.url=jdbc:mysql://localhost:3306/house_booking
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
