--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/house_booking
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=simplecodecamp@gmail.com
+spring.mail.password=eyoqnoatehylrnyi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
