--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/house_booking
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
